2009-07-30  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Change default state of qt terminal to disabled.
	To build with qt support use    ./configure --enable-qt

2009-07-30  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* configue.in: Fix a compile error when the Qt terminal is disabled.

2009-07-29  Jérôme Lodewyck <lodewyck@users.sourceforge.net>
	* configue.in src/Makefile.am: better check for Qt tools
	moc uic and lrelease.

2009-07-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Handle xticlabels() in the case of
	histograms with errorbars.  Bugfix

2009-07-28  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/po/qtgnuplot_ja.ts: Japanese translation. patch 2828290

2009-07-28  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/qt_term.cpp: When consecutive motion events are received,
	only process the last one.
	* src/Makefile.am: Fix make rules for embed_example

2009-07-27  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/qt_term.cpp qtterminal/QtGnuplot.pro qtterminal/po/*:
	Add an internationalization framework and a french translation.

2009-07-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_color_smooth_box) src/gadgets.h src/gadgets.c
	src/graphics.c (boundary):  Add a field color_box.xoffset to allow the
	colorbox to be shifted left or right from the default placement.
	Use this internally to correct for the width taken by y2 tics and
	labels.
	Bugfix:  'set y2tics; plot foo using 1:2:3 axes x1y2 lc palette'

	* src/graphics.c (do_polygon):  Change the clipping rules for polygons
	to match those of rectangles.  A polygon is clipped only if all of its
	vertices are specified in plot coordinates (i.e. not screen or graph
	coordinates).

2009-07-24  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/qt_term.cpp: use locale config macros

	* qtterminal/QtGnuplotWindow.cpp: remove the "export to EPS" option.
