@@ -3,6 +3,9 @@
 	* configure.in: Change default state of qt terminal to disabled.
 	To build with qt support use    ./configure --enable-qt
 
+	* src/qtterminal/Makefile.am: Add additional files to the list of
+	things to placed in the distribution package.
+
 2009-07-30  Jérôme Lodewyck <lodewyck@users.sourceforge.net>
 
 	* configue.in: Fix a compile error when the Qt terminal is disabled.
